<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/speciality_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/title_add_working_schedule"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="#FFFFFF" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/AddWorkingSchedule_day_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:prompt="@string/pick_day" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/AddWorkingSchedule_fromTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/open_time"
            android:inputType="time" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/AddWorkingSchedule_toTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/close_time"
            android:inputType="time" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/AddWorkingSchedule_holiday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/holiday" />

</LinearLayout>
